feat: Add ship tile to html.

--- a/src/template.html
+++ b/src/template.html
@@ -22,10 +22,20 @@
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>
+          <div class="ship-vertice"></div>
+          <div class="ship-vertice"></div>
+          <div class="ship-vertice"></div>
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>
+          <div class="empty-vertice"></div>  
           <div class="empty-vertice"></div>
+          <div class="empty-vertice"></div>
+          <div class="empty-vertice"></div>
+          <div class="ship-vertice"></div>
+          <div class="ship-vertice"></div>
+          <div class="ship-vertice"></div>
+          <div class="ship-vertice"></div>
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>  
@@ -73,19 +83,9 @@
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>  
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
-          <div class="empty-vertice"></div>
+          <div class="ship-vertice"></div>
+          <div class="ship-vertice"></div>
+          <div class="ship-vertice"></div>
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>
           <div class="empty-vertice"></div>  
@@ -118,20 +118,10 @@
         <div class="empty-vertice"></div>
         <div class="empty-vertice"></div>
         <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>  
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>
-        <div class="empty-vertice"></div>  
+        <div class="ship-vertice"></div>
+        <div class="ship-vertice"></div>
+        <div class="ship-vertice"></div>
+        <div class="ship-vertice"></div>  
         <div class="empty-vertice"></div>
         <div class="empty-vertice"></div>
         <div class="empty-vertice"></div>
@@ -147,6 +137,16 @@
         <div class="empty-vertice"></div>
         <div class="empty-vertice"></div>
         <div class="empty-vertice"></div>
+        <div class="empty-vertice"></div>
+        <div class="empty-vertice"></div>
+        <div class="empty-vertice"></div>
+        <div class="empty-vertice"></div>
+        <div class="empty-vertice"></div>  
+        <div class="empty-vertice"></div>
+        <div class="empty-vertice"></div>
+        <div class="ship-vertice"></div>
+        <div class="ship-vertice"></div>
+        <div class="ship-vertice"></div>
         <div class="empty-vertice"></div>
         <div class="empty-vertice"></div>
         <div class="empty-vertice"></div>
